Mega menu search: Prevent a line break in the text input field
* by properly hiding the more button (when necessary) and explicitly
setting the input field width
* also: renamed variable single-column-mega-menu to
single-column-mega-menu-width

--- a/web/htdocs/themes/facelift/scss/_variables.scss
+++ b/web/htdocs/themes/facelift/scss/_variables.scss
@@ -96,7 +96,7 @@ $spacing-half: (0.5 * $spacing);
 $spacing-quarter: (0.25 * $spacing);
 $spacing-double: (2 * $spacing);
 $menu-item-spacing: (2.2 * $spacing);
-$single-column-mega-menu: 340px;
+$single-column-mega-menu-width: 340px;
 
 // -----------------------------------------------------------------------------
 // States
